--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <div>
       <div class="container2">
         <h5 class="container-head">Have a project in mind?We would love to here from you!</h5>
+        <div class="button-btn">
         <button class="button-2">GET IN TOUCH WITH US</button>
+    </div>
         </div>
     </div>
      
