--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
   <section>
              <div class="flex-container">
                     <div class="flex-grid">
-                          <img src="ark-k.png/w1.jpg" alt="hand" width="300" height="400"/>
-                          <img src="ark-k.png/w3.jpg" alt="grass"width="300" height="400"/>
-                          <img src="ark-k.png/w4.jpg" alt="wheat"width="300" height="400"/>
-                          <img src="ark-k.png/w5.jpg" alt="leaves"width="300" height="400"/>
-                          <img src="ark-k.png/w4.jpg" alt="wheat"width="300" height="400"/>
+                          <img src="ark-k.png/w1.jpg" class="hovers"  alt="hand" width="300" height="400"/>
+                          <img src="ark-k.png/w3.jpg" class="hovers" alt="grass"width="300" height="400"/>
+                          <img src="ark-k.png/w4.jpg" class="hovers" alt="wheat"width="300" height="400"/>
+                          <img src="ark-k.png/w5.jpg" class="hovers" alt="leaves"width="300" height="400"/>
+                          <img src="ark-k.png/w4.jpg" class="hovers" alt="wheat"width="300" height="400"/>
                           
                     </div> 
              </div>
