--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>landing-page-2</title>
+    <title>Ark-Studio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -74,11 +74,11 @@
   <section>
              <div class="flex-container">
                     <div class="flex-grid">
-                          <img src="ark-k.png/w1.jpg" class="hovers"  alt="hand" width="300" height="400"/>
-                          <img src="ark-k.png/w3.jpg" class="hovers" alt="grass"width="300" height="400"/>
-                          <img src="ark-k.png/w4.jpg" class="hovers" alt="wheat"width="300" height="400"/>
-                          <img src="ark-k.png/w5.jpg" class="hovers" alt="leaves"width="300" height="400"/>
-                          <img src="ark-k.png/w4.jpg" class="hovers" alt="wheat"width="300" height="400"/>
+                          <img src="ark-k.png/w1.jpg" class="hovers"  alt="hand" width="250" height="400"/>
+                          <img src="ark-k.png/w3.jpg" class="hovers" alt="grass"width="250" height="400"/>
+                          <img src="ark-k.png/w4.jpg" class="hovers" alt="wheat"width="250" height="400"/>
+                          <img src="ark-k.png/w5.jpg" class="hovers" alt="leaves"width="250" height="400"/>
+                          <img src="ark-k.png/w4.jpg" class="hovers" alt="wheat"width="250" height="400"/>
                           
                     </div> 
              </div>
